--- a/static/articles/网络/代理.md
+++ b/static/articles/网络/代理.md
@@ -10,10 +10,10 @@
 
 > 代理按部署位置分为正向代理和反向代理，正向代理部署在客户端，反向代理部署在web服务器端。
 
-![缓存服务器部署方式1](assets/代理-nginx/缓存服务器部署方式-服务端.svg)  
+![缓存服务器部署方式1](assets/代理/缓存服务器部署方式-服务端.svg)  
 <p align="center">缓存服务器部署在服务器端</p>
 
-![缓存服务器部署方式1](assets/代理-nginx/缓存服务器部署方式-客户端.svg) 
+![缓存服务器部署方式1](assets/代理/缓存服务器部署方式-客户端.svg) 
 <p align="center">缓存服务器部署在客户端</p>
 
 > 正向代理
@@ -39,7 +39,7 @@
   - 匿名性和安全性：保护服务端
   
 
-<img src="assets/代理-nginx/Forward-Reverse.png.webp" alt="Forward-Reverse.png" style="zoom:50%;" /> 
+<img src="assets/代理/Forward-Reverse.png.webp" alt="Forward-Reverse.png" style="zoom:50%;" /> 
 
 <p align="center">正向代理和反向代理的区别</p>
 
