添加标题编号

--- a/static/articles/前端/前端工程化/模块.md
+++ b/static/articles/前端/前端工程化/模块.md
@@ -1,3 +1,6 @@
+---
+hide: false
+---
 # 模块化规范
 
 1. 应用环境：服务端 & 客服端
@@ -254,7 +257,7 @@ Without rel="modulepreload", the browser needs to perform multiple HTTP requests
 
 > module script 和 普通 script 的区别
 
-- The `async` attribute does not work for inline classic scripts, but it does work for inline <script type="module">
+- The `async` attribute does not work for inline classic scripts, but it does work for inline `<script type="module">`
 -  module scripts (and their imports) are fetched with CORS. 需要遵守跨域共享策略。
 -  You can only use import and export statements inside modules, not regular scripts.（普通 script）
 -  模块中自动使用严格模式
