--- a/static/articles/前端/前端工程化/私有源.md
+++ b/static/articles/前端/前端工程化/私有源.md
@@ -40,7 +40,7 @@ entry: {
 
 > 本地私有 NPM 注册中心
 
-```sh
+```shell
 npm set registry http://localhost:4873
 npm install --registry http://localhost:4873
 // .npmrc
@@ -48,15 +48,15 @@ registry=http://localhost:4873
 ```
 
 - 添加用户/登录
-```sh
+```shell
 npm adduser --registry  http://localhost:4873
 ```
 - 发布包
-```sh
+```shell
 npm publish --registry http://localhost:4873
 ```
 - 安装包
-```sh
+```shell
 npm install @xx/input
 ```
 
@@ -67,7 +67,7 @@ npm install @xx/input
 
 通过 htpsaawd-for-sinopia 添加账号
 
-```sh
+```shell
 npm install htpasswd-for-sinopia -g
 sinopia-adduser # 在 htpasswd 目录下执行
 ```
@@ -110,13 +110,13 @@ packages:
 
 - 组件发布\更新
 
-```sh
+```shell
 npm publish --registry xxx
 ```
 
 > 登录登出私有源
 
-```sh
+```shell
 npm login --scope @mycorp --registry https://registry.mycorp.com
 npm logout --scope=@mycorp
 ```
@@ -125,13 +125,13 @@ npm logout --scope=@mycorp
 
 初始化一个带 scope 的 package
 
-```sh
+```shell
 npm init --scope=@mycorp --yes
 ```
 
 > 常用命令
 
-```sh
+```shell
 npm whoami
 npm config ls
 npm config set registry https://registry.npmjs.org/
@@ -151,13 +151,13 @@ npm unpublish [<package-spec>]
 
 - docker 安装
 
-```sh
+```shell
 docker pull verdaccio/verdaccio:nightly-master
 ```
 
 - docker 运行
 
-```sh
+```shell
 docker run -it --rm --name verdaccio -p 4873:4873 verdaccio/verdaccio
 ```
 
@@ -178,7 +178,7 @@ docker run -it --rm --name verdaccio -p 4873:4873 verdaccio/verdaccio
 
 这个方法得益于，npm提供的的丰富安装方法。通过下面方法安装：
 
-```sh
+```shell
 npm i -S git+ssh://git@git.showgold.cn:npm/hello.git
 npm install -S git+https://isaacs@github.com/npm/npm.git
 npm install -S git://github.com/npm/npm.git#v1.0.27
