--- a/static/articles/Vue/总结.md
+++ b/static/articles/Vue/总结.md
@@ -66,31 +66,40 @@ props: ['propsObj'],
 
 # Vue 生命周期 watch 执行顺序 | 指令生命周期
 
-- 初始渲染
+> 初始渲染
 
-  > beforeCreate
-  > created
-  > beforeMount
-  > mounted
+- beforeCreate
+- created
+- beforeMount
+- mounted
   
-- props 或 data 更新
+> props 或 data 更新
 
-  > watch
-  >
-  > beforUpdate
-  >
-  > updated
+- watch
+-  beforUpdate
+- updated
 
-- watch immediate 情况下初始渲染
+> watch immediate 情况下初始渲染
 
-  > beforeCreate
-  >
-  > **watch 监听器** ,可以访问 `this` 
-  >
-  > created
-  > beforeMount
-  > mounted
-  
+- beforeCreate
+- **watch 监听器** ,可以访问 `this` 
+- created
+- beforeMount
+- mounted
+
+> 父组件和子组件的生命周期执行顺序
+
+- 父组件的`beforeCreate`
+- 父组件的`created`
+- 父组件的`beforeMount`
+
+  - 子组件的`beforeCreate`
+  - 子组件的`created`
+  - 子组件的`beforeMount`
+  - 子组件的`mounted`
+
+- 父组件的`mounted`
+
 ## 指令生命周期
 
 bind
@@ -112,7 +121,7 @@ unbind
 
 # 异步更新DOM
 
-vue观察到数据变化时并不是离家更新DOM，而是开启一个事件队列，缓冲在同一个事件循环中发生的所有数据改变，在缓冲时会去除重复数据。然后在下一个事件循环 tick 中刷新新队列并执行更新。
+vue观察到数据变化时并不是立即更新DOM，而是开启一个事件队列，缓冲在同一个事件循环中发生的所有数据改变，在缓冲时会去除重复数据。然后在下一个事件循环 tick 中刷新新队列并执行更新。
 
 vue会根据当前浏览器环境优先使用原生 Promise 和 MutatinObserver。
 
@@ -159,6 +168,8 @@ instance.$el.remove();
 > `this.$slots.default[0].componentInstance`
 
 # 内容分发
+
+> 作用域插槽在需要同时封装逻辑、组合视图界面时很有用
 
 > 动态组件 `<component>` + `<slot>` 内容分发
 
