--- a/static/articles/前端/前端工程化/图标.md
+++ b/static/articles/前端/前端工程化/图标.md
@@ -96,7 +96,9 @@ svg path {
   - [image-webpack-loader](https://github.com/tcoopman/image-webpack-loader) 
   
 - svg 压缩优化
-  - [svgo](https://github.com/svg/svgo) 
+  - [svgo](https://github.com/svg/svgo) [svgo简介](https://www.zhangxinxu.com/wordpress/2016/02/svg-compress-tool-svgo-experience/) 
+  - SVGOMG
+  - mini-svg-data-uri: svg 编码为utf8，替换特殊字符
   
 - svg 转换为字体
   - [font-carrier](https://github.com/purplebamboo/font-carrier#readme)：svg 转换为字体的 npm 包
@@ -148,6 +150,10 @@ svg path {
 </style>
 ```
 
+> ie下面渲染不出 unicode
+
+记得使用16进制unicode的时候 加上;号，否则ie无法将它解析。10进制的没这个问题。现在大部分字体都是使用16进制标志的，主要是为了方便移动端，还有css3的那种写法。
+
 > 参考
 > [font-face](https://www.zhangxinxu.com/wordpress/2017/03/css3-font-face-src-local/) 
 > [iconfont 记录](http://purplebamboo.github.io/2014/01/09/iconfont/) 
@@ -156,3 +162,9 @@ svg path {
 
 [canvas教程-mdn](https://developer.mozilla.org/zh-CN/docs/Web/API/Canvas_API) 
 [canvas 画分形图](https://mp.weixin.qq.com/s/T8Bd3hOXbAnxS5Te9l1V8w) 
+
+# emoji
+
+> [unicode与emoji](https://juejin.cn/post/6844903637555101704) 
+>
+> `String.fromCodePoint` `str.codePointAt` 
