--- a/static/articles/前端/前端工程化/打包工具.md
+++ b/static/articles/前端/前端工程化/打包工具.md
@@ -2,7 +2,6 @@
   - **/cafe-directive
 
 
-- axios 获取本地文件字符串
 - package.json 配置 directories file unpkg
 - npm pack
 
@@ -21,7 +20,7 @@
 
 - 插件
 
-```sh
+```shell
 npm github-markdown-css 
 vue add style-resources-loader
 ```
@@ -42,8 +41,7 @@ vue add style-resources-loader
 - svg生成iconfont字体图标
   - [webpack自动用svg生成iconfont字体图标，支持热重载](https://segmentfault.com/a/1190000017480480) 
 - svg生成vue 组件
-
-
+- webpack rollup [Tree Shaking](https://webpack.docschina.org/guides/tree-shaking/) sideEffects 打包库 esbuild
 
 # 不同工具的区别
 
@@ -60,7 +58,7 @@ vue add style-resources-loader
 
 # rollup
 
-```sh
+```shell
 npx rollup -c config.js -i src/components/button/index.js -f es --name "myBundle" -o bundle.js
 ```
 
