--- a/static/articles/前端/前端调试.md
+++ b/static/articles/前端/前端调试.md
@@ -10,14 +10,21 @@
 
 ## 工具
 
-- Chrome
+- **Chrome**
 
 [查看chrome可执行文件路径、用户资料等](chrome://version/) 
 
-Chrome 可以不使用插件，用命令行启动浏览器并指定代理服务器
 
-```sh
-/Applications/Google\ Chrome.app/Contents/MacOS/Google\ Chrome --disable-web-security --proxy-server="http://127.0.0.1:8500" --proxy-bypass-list="<-loopback>"
+1. 如果页面所在 Origin 和跨域请求资源所在 Origin 都是 HTTP 协议，那么可以用以下命令启动 Chrome 并实现<font color="red">跨域请求</font>，不需要服务端配置，也不用其他操作。
+
+```javascript
+open -a "Google Chrome dev" --args --disable-web-security --user-data-dir="/xx/temp"
+```
+
+2. Chrome 可以不使用插件，用命令行启动浏览器并指定代理服务器
+
+```shell
+/Applications/Google\ Chrome.app/Contents/MacOS/Google\ Chrome --disable-web-security --user-data-dir="xxx" --proxy-server="http://127.0.0.1:8500" --proxy-bypass-list="<-loopback>"
 
 // chrome非安全模式
 // chrome http://xx.com -–disable-extensions –-disable-sync –-disable-web-security -–proxy-server="http://127.0.0.1:8500"
@@ -169,6 +176,7 @@ devServer: {
   - 用命令行启动chrome，在命令行参数中配置代理服务器
   - 用 version-70 的 Chromium，[下载地址](https://vikyd.github.io/download-chromium-history-version/#/) 
   
+- 如果被代理的远程服务器是 HTTPS 协议，那本地开发服务器也需要是 HTTPS
 
 ## Example
 
@@ -198,12 +206,11 @@ SwitchyOmega: 2.5.21
   - 修改项目 `config.js` 文件 `host` 的值为生产环境下的值，解决跨域问题
   
   - 修改 `vue.config.js` ，增加
-  
-    ```json
-    devServer: {
-      disableHostCheck: true
-    },
-    ```
+  ```
+  devServer: {
+    disableHostCheck: true
+  },
+  ```
 
 > 代理 sdp beta
 
@@ -215,9 +222,10 @@ SwitchyOmega: 2.5.21
 > nginx 代理 https
 
 - [nginx如何处理一个请求-官网](https://tengine.taobao.org/nginx_docs/cn/docs/http/request_processing.html) 
-
+  http://nginx.org/en/docs/beginners_guide.html
+  http://nginx.org/en/docs/http/ngx_http_rewrite_module.html#break
+- https://www.nginx.com/resources/wiki/start/topics/examples/full/
 - [nginx配置-知乎](https://zhuanlan.zhihu.com/p/31202053) 
-
 - [nginx 配置UI](https://www.digitalocean.com/community/tools/nginx?global.app.lang=zhCN) 
   [nginx location配置](https://cloud.tencent.com/developer/article/1701547) 
   [nginx location配置](https://segmentfault.com/a/1190000022315733) 
@@ -232,9 +240,9 @@ location /js {
 }
 ```
 
-如果proxy_pass的URL定向里包括URI，那么请求中匹配到location中URI的部分会被proxy_pass后面URL中的URI替换。
+如果 proxy_pass 的 UR L定向里包括 URI，那么请求中匹配到 location 中 URI 的部分会被 proxy_pass 后面 URL 中的 URI 替换。
 
-如果proxy_pass的URL定向里不包括URI，那么请求中的URI会保持原样传送给后端server。
+如果 proxy_pass 的 URL 定向里不包括 URI，那么请求中的 URI 会保持原样传送给后端 server。
 
 `$scheme://$host$request_uri`
 
@@ -242,7 +250,7 @@ location /js {
 
 
 
-> 记录|思考
+## 记录|思考
 
 代理某个url，其他的请求不处理？
 
@@ -255,10 +263,18 @@ nginx 将指定的url转发到 本地服务器，其他的转发到源服务器
 - nginx 是否正确处理请求？
 
 
-
 - rewrite  和 proxy 区别？
 - nginx 开机启动
 
+## [nginx 代理管理](https://nginxproxymanager.com/)
+
+Nginx 经常用作反向代理，这个工具为反向代理提供一个 Web 管理界面
+
+## 命令
+
+nginx -s
+
+nginx -t
 
 # [xswitch](https://github.com/yize/xswitch) 
 
